# misc

./: .gitignore  NewPDPhotographyNeededROCResults930.csv  be_scraper.py  blackjack.py  cards.py  ns_smartsheet.py  pd.py  pd_launches_input.toml
be_scrape/: be_scraper.py  output.html  output_query.html  scrape_test.py  sel_output.html  sel_test.py
be_scrape/be/: pyvenv.cfg
card_games/: blackjack.py  cards.py
card_games/tests/: test_blackjack.py
pd_launches/: pyproject.toml
pd_launches/pd_launches/: data.json  main.py  pd.py  pd_gui.py  pygui_test.py
pd_launches/tests/: test_pd_launches.py
